# hasegawa_wakatani

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
findiff_1d/: findiff_1d.yaml
findiff_2d/: findiff_2d.yaml
finite_difference_1D/: finite_difference_1D.yaml
finite_difference_2D/: finite_difference_2D.yaml
hasegawa_wakatani/: commands.py  execs.py  main.py  models.py  plot.py  plots.py  utils.py
pspectral_1d/: pspectral_1d.yaml
pspectral_2d/: pspectral_2d.yaml
spectral_1D/: spectral_1D.yaml
spectral_2D/: spectral_2D.yaml
src/hasegawa_wakatani/: __main__.py  commands.py  models.py  plots.py  utils.py
tests/: test_models.py
